--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^4.0.0",
     "@tanstack/react-table": "^8.9.11",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
@@ -29,6 +31,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
+    "countries-states-cities": "^1.0.6",
     "date-fns": "^2.29.3",
     "eslint": "8.36.0",
     "eslint-config-next": "^14.2.3",
@@ -48,6 +51,7 @@
     "react": "^18.2.0",
     "react-chat-engine": "^1.11.28",
     "react-date-range": "^1.4.0",
+    "react-datepicker": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
     "react-hot-toast": "^2.4.0",
