--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@uploadthing/react": "^6.5.0",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
@@ -37,6 +38,8 @@
     "eslint-config-next": "^14.2.3",
     "express": "^4.19.2",
     "fast-check": "^3.17.2",
+    "flutterwave-node-v3": "^1.1.10",
+    "flutterwave-node-v3-withtypes": "^1.0.11",
     "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.376.0",
@@ -44,6 +47,7 @@
     "next": "^14.2.3",
     "next-auth": "^4.20.1",
     "next-cloudinary": "^4.0.1",
+    "next-nprogress-bar": "^2.3.13",
     "next-superjson-plugin": "^0.5.6",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
@@ -67,17 +71,20 @@
     "tailwind-merge": "^2.3.0",
     "typescript": "5.0.2",
     "uploadthing": "^6.10.0",
+    "uuid": "^10.0.0",
     "world-countries": "^4.0.0",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/leaflet": "^1.9.3",
     "@types/lodash": "^4.17.5",
     "@types/react-date-range": "^1.4.4",
     "@types/react-slick": "^0.23.13",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
