--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.0.4",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -40,6 +43,7 @@
     "fast-check": "^3.17.2",
     "flutterwave-node-v3": "^1.1.10",
     "flutterwave-node-v3-withtypes": "^1.0.11",
+    "hover-carousel": "^1.1.0",
     "leaflet": "^1.9.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.376.0",
@@ -54,6 +58,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-chat-engine": "^1.11.28",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^7.1.0",
     "react-dom": "^18.2.0",
@@ -64,6 +69,7 @@
     "react-select": "^5.7.2",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.13.8",
+    "react-step-progress-bar": "^1.0.3",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
@@ -80,6 +86,7 @@
     "@types/canvas-confetti": "^1.6.4",
     "@types/leaflet": "^1.9.3",
     "@types/lodash": "^4.17.5",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-date-range": "^1.4.4",
     "@types/react-slick": "^0.23.13",
     "@types/socket.io": "^3.0.2",
